# Breakout-C

./: Background.c  Ball.c  Block.c  BlocksManager.c  CMakeLists.txt  Game.c  Leaderboard.c  Level.c  MainMenu.c  Player.c  PowerUp.c  VectorMath.c  main.c
include/: Background.h  Ball.h  Block.h  BlocksManager.h  Core.h  Game.h  Leaderboard.h  Level.h  MainMenu.h  Player.h  PowerUp.h  VectorMath.h
